samples/_failures_safe/1761206533_a7eacb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c30ea9d9.c: In function ‘main’:
./samples/SAFE/__tmp_c30ea9d9.c:140:12: error: missing terminating " character
  140 |     printf("Enter %zu
      |            ^~~~~~~~~~
./samples/SAFE/__tmp_c30ea9d9.c:140:5: error: expected expression at end of input
  140 |     printf("Enter %zu
      |     ^~~~~~
./samples/SAFE/__tmp_c30ea9d9.c:140:5: error: expected declaration or statement at end of input
